fixed scrollbar coloring

--- a/index.less
+++ b/index.less
@@ -205,3 +205,17 @@
   color: #2b303b;
   background-color: #bf616a;
 }
+.tree-view-resizer, .editor {
+  ::-webkit-scrollbar {
+    width: 1em;
+    height: 1em;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #2B303B;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #232830;
+  }
+}
